@@ -1,3 +1,14 @@
+2013-01-26  Sam Weinig  <sam@webkit.org>
+
+        Simplify environment creation in XPC service re-exec
+        https://bugs.webkit.org/show_bug.cgi?id=108017
+
+        Reviewed by Dan Bernstein.
+
+        * Shared/EntryPointUtilities/mac/XPCService/XPCServiceBootstrapper.Development.h:
+        (WebKit::XPCServiceEventHandler):
+        There is no need to copy these strings.
+
 2013-01-26  Alexey Proskuryakov  <ap@apple.com>
 
         Remove code for handling NetworkProcess authentication challenges in WebProcess
